// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiToolRenderer > renders multiple tool groups 1`] = `
<div
  className="multi-tool-renderer streaming"
>
  <div
    className="tools-container collapsed-view"
  >
    <div
      aria-expanded={false}
      aria-label="2 processing steps, collapsed"
      className="tools-collapsed-header"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="tools-count"
      >
        <span
          className="tools-count-value"
        >
          2
        </span>
        <span
          className="tools-count-label"
        >
          steps
        </span>
      </div>
      <span
        className="expand-chevron"
      >
        <span
          data-icon="chevron-icon"
          data-size={24}
        />
      </span>
    </div>
    <div
      className="tools-collapsed-list"
    >
      <div
        className="tools-list"
      >
        <div>
          <div
            className="tool-collapsed-wrapper"
            data-state="pending"
          >
            <div
              className="tool-item-expanded"
            >
              <div
                className="tool-connector-line"
              />
              <div
                className="tool-item-row"
              >
                <div
                  className="tool-icon-wrapper"
                >
                  <div
                    className="tool-icon-circle"
                  >
                    <span
                      data-icon={
                        {
                          "attributes": {
                            "fill": "none",
                            "height": "24",
                            "stroke": "currentColor",
                            "stroke-linecap": "round",
                            "stroke-linejoin": "round",
                            "stroke-width": "2",
                            "viewBox": "0 0 24 24",
                            "width": "24",
                            "xmlns": "http://www.w3.org/2000/svg",
                          },
                          "content": "<circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/>",
                        }
                      }
                      data-size={14}
                    />
                  </div>
                </div>
                <div
                  className="tool-content with-padding"
                >
                  <div
                    className="tool-status-row"
                  >
                    <div
                      className="tool-status"
                    >
                      Searched internal documents
                    </div>
                  </div>
                  <div
                    className="tool-text"
                  >
                    <div />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-current="step"
            className="tool-collapsed-wrapper"
            data-state="active"
          >
            <div
              className="tool-item-expanded active"
            >
              <div
                className="tool-connector-line"
              />
              <div
                className="tool-item-row"
              >
                <div
                  className="tool-icon-wrapper"
                >
                  <div
                    className="tool-icon-circle"
                  >
                    <span
                      data-icon={
                        {
                          "attributes": {
                            "fill": "none",
                            "height": "24",
                            "stroke": "currentColor",
                            "stroke-linecap": "round",
                            "stroke-linejoin": "round",
                            "stroke-width": "2",
                            "viewBox": "0 0 24 24",
                            "width": "24",
                            "xmlns": "http://www.w3.org/2000/svg",
                          },
                          "content": "<circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/>",
                        }
                      }
                      data-size={14}
                    />
                  </div>
                </div>
                <div
                  className="tool-content"
                >
                  <div
                    className="tool-status-row"
                  >
                    <div
                      className="tool-status"
                    >
                      Searched internal documents
                    </div>
                  </div>
                  <div
                    className="tool-text"
                  >
                    <div />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiToolRenderer > renders non-detailed tool collapsed view when streaming 1`] = `
<div
  className="multi-tool-renderer streaming"
>
  <div
    className="tools-container collapsed-view"
  >
    <div
      aria-expanded={false}
      aria-label="1 processing step, collapsed"
      className="tools-collapsed-header"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="tools-count"
      >
        <span
          className="tools-count-value"
        >
          1
        </span>
        <span
          className="tools-count-label"
        >
          step
        </span>
      </div>
      <span
        className="expand-chevron"
      >
        <span
          data-icon="chevron-icon"
          data-size={24}
        />
      </span>
    </div>
    <div
      className="tools-collapsed-list"
    >
      <div
        className="tools-list"
      >
        <div>
          <div
            aria-current="step"
            className="tool-collapsed-wrapper"
            data-state="active"
          >
            <div
              className="tool-item-collapsed active"
            >
              <div
                className="tool-collapsed-icon"
              >
                <span
                  className="tool-icon-dot"
                />
              </div>
              <span
                className="tool-status tool-collapsed-status"
              >
                Generating images...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiToolRenderer > renders search tool groups 1`] = `
<div
  className="multi-tool-renderer streaming"
>
  <div
    className="tools-container collapsed-view"
  >
    <div
      aria-expanded={false}
      aria-label="1 processing step, collapsed"
      className="tools-collapsed-header"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="tools-count"
      >
        <span
          className="tools-count-value"
        >
          1
        </span>
        <span
          className="tools-count-label"
        >
          step
        </span>
      </div>
      <span
        className="expand-chevron"
      >
        <span
          data-icon="chevron-icon"
          data-size={24}
        />
      </span>
    </div>
    <div
      className="tools-collapsed-list"
    >
      <div
        className="tools-list"
      >
        <div>
          <div
            aria-current="step"
            className="tool-collapsed-wrapper"
            data-state="active"
          >
            <div
              className="tool-item-expanded active"
            >
              <div
                className="tool-connector-line"
              />
              <div
                className="tool-item-row"
              >
                <div
                  className="tool-icon-wrapper"
                >
                  <div
                    className="tool-icon-circle"
                  >
                    <span
                      data-icon={
                        {
                          "attributes": {
                            "fill": "none",
                            "height": "24",
                            "stroke": "currentColor",
                            "stroke-linecap": "round",
                            "stroke-linejoin": "round",
                            "stroke-width": "2",
                            "viewBox": "0 0 24 24",
                            "width": "24",
                            "xmlns": "http://www.w3.org/2000/svg",
                          },
                          "content": "<circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/>",
                        }
                      }
                      data-size={14}
                    />
                  </div>
                </div>
                <div
                  className="tool-content"
                >
                  <div
                    className="tool-status-row"
                  >
                    <div
                      className="tool-status"
                    >
                      Searched internal documents
                    </div>
                  </div>
                  <div
                    className="tool-text"
                  >
                    <div />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
